@@ -41,6 +41,7 @@ Bug fixes
  * Page Copy will now also copy ParentalManyToMany field relations (LB (Ben Johnston))
  * Admin HTML header now includes correct language code (Matt Westcott)
  * Unclear error message when saving image after focal point edit (Hugo van den Berg)
+ * Fix: Increase max length on ``Embed.thumbnail_url`` to 255 characters (Kevin Howbrook)
 
 
 Upgrade considerations
